# trial.online

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
benchmark/: CMakeLists.txt  GoogleBenchmark.cmake  circular_span_benchmark.cpp
benchmark/cumulative/: hermite_density_benchmark.cpp  moment_benchmark.cpp  regression_benchmark.cpp
benchmark/decay/: moment_benchmark.cpp
benchmark/interim/: hermite_density_benchmark.cpp  moment_benchmark.cpp  psquare_quantile_benchmark.cpp  regression_benchmark.cpp
benchmark/window/: moment_benchmark.cpp  regression_benchmark.cpp
cmake/: CMakeLists.txt
example/: CMakeLists.txt
example/density/: CMakeLists.txt  cumulative.cpp  interim.cpp  window.cpp
example/regression/: CMakeLists.txt  cumulative.cpp  window.cpp
include/trial/online/: circular_span.hpp  iterator.hpp  with.hpp
include/trial/online/average/: arithmetic.hpp  arithmetic_variance.hpp  cumulative.hpp  cumulative_variance.hpp  exponential.hpp  types.hpp
include/trial/online/average/detail/: arithmetic.ipp  arithmetic_variance.ipp  cumulative.ipp  cumulative_variance.ipp  exponential.ipp
include/trial/online/correlation/: covariance.hpp  pearson.hpp
include/trial/online/correlation/detail/: covariance.ipp  pearson.ipp
include/trial/online/covariance/: cumulative.hpp
include/trial/online/covariance/detail/: cumulative.ipp
include/trial/online/cumulative/: comoment.hpp  correlation.hpp  covariance.hpp  hermite_density.hpp  moment.hpp  regression.hpp  trend.hpp
include/trial/online/cumulative/detail/: comoment.ipp  correlation.ipp  covariance.ipp  moment.ipp  regression.ipp  trend.ipp
include/trial/online/decay/: moment.hpp
include/trial/online/decay/detail/: moment.ipp
include/trial/online/detail/: circular_span.ipp  functional.hpp  hermite_density.hpp  hermite_density.ipp  lightweight_test.hpp  math.hpp  type_traits.hpp
include/trial/online/impulse/: finite.hpp  infinite.hpp
include/trial/online/impulse/detail/: finite.ipp  infinite.ipp
include/trial/online/interim/: comoment.hpp  hermite_density.hpp  moment.hpp  psquare_quantile.hpp  regression.hpp
include/trial/online/interim/detail/: comoment.ipp  moment.ipp  psquare_quantile.ipp  regression.ipp
include/trial/online/moment/: arithmetic.hpp  cumulative.hpp  decay.hpp  exponential.hpp  normalized_decay.hpp  types.hpp
include/trial/online/moment/detail/: arithmetic.ipp  cumulative.ipp  decay.ipp  exponential.ipp  normalized_decay.ipp
include/trial/online/quantile/: interim_psquare.hpp  psquare.hpp
include/trial/online/quantile/detail/: interim_psquare.ipp  psquare.ipp
include/trial/online/regression/: linear.hpp
include/trial/online/regression/detail/: linear.ipp
include/trial/online/sampling/: reservoir.hpp
include/trial/online/sampling/detail/: reservoir.ipp
include/trial/online/window/: comoment.hpp  covariance.hpp  hermite_density.hpp  moment.hpp  regression.hpp
include/trial/online/window/detail/: comoment.ipp  covariance.ipp  moment.ipp  regression.ipp
test/: CMakeLists.txt  circular_span_suite.cpp
test/average/: arithmetic_suite.cpp  arithmetic_variance_suite.cpp  cumulative_suite.cpp  cumulative_variance_suite.cpp  exponential_suite.cpp
test/correlation/: covariance_suite.cpp  pearson_suite.cpp
test/covariance/: cumulative_suite.cpp
test/cumulative/: comoment_suite.cpp  correlation_suite.cpp  covariance_suite.cpp  hermite_density_suite.cpp  moment_suite.cpp  regression_suite.cpp  trend_suite.cpp
test/decay/: moment_suite.cpp
test/detail/: type_traits_suite.cpp
test/impulse/: finite_suite.cpp  infinite_suite.cpp
test/interim/: comoment_suite.cpp  moment_suite.cpp  psquare_quantile_suite.cpp  regression_suite.cpp
test/moment/: arithmetic_suite.cpp  cumulative_suite.cpp  decay_suite.cpp  exponential_suite.cpp  normalized_decay_suite.cpp
test/quantile/: interim_psquare_suite.cpp  psquare_suite.cpp
test/regression/: linear_suite.cpp
test/sampling/: reservoir_suite.cpp
test/window/: comoment_suite.cpp  covariance_suite.cpp  hermite_density_suite.cpp  moment_suite.cpp  regression_suite.cpp
